+ ErrorPanelListItem für BaseAdapter + EndOfListItem für BaseAdapter

--- a/app/src/main/res/layout/fragment_error_panel.xml
+++ b/app/src/main/res/layout/fragment_error_panel.xml
@@ -9,7 +9,7 @@
     android:layout_gravity="center"
     android:gravity="center"
     android:padding="32dp"
-    tools:context=".widget.ErrorPanelFragment">
+    tools:context=".widget.error_panel.ErrorPanelFragment">
 
     <ImageView
         android:layout_width="64dp"
