--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,10 @@
 
         <!-- Customize your theme here. -->
     </style>
+
+    <!-- Style für die Fullscreen-Dialoge -->
+    <style name="Theme.FahrradverleihAndroid.FullscreenDialog" parent="Theme.MaterialComponents.Dialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowBackground">@color/white</item>
+    </style>
 </resources>
