--- a/app/src/main/res/drawable/startup_content_background.xml
+++ b/app/src/main/res/drawable/startup_content_background.xml
@@ -2,6 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#75FFFFFF" />
+    <solid android:color="#55FFFFFF" />
+
+    <corners
+        android:radius="20dp" />
 
 </shape>
