--- a/app/src/main/res/layout/activity_startup.xml
+++ b/app/src/main/res/layout/activity_startup.xml
@@ -4,30 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:background="#B6771A"
+    android:background="@drawable/startup"
     tools:context=".view.startup.StartupActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="112dp"
+        android:background="@color/brand_primary_translucent"
+        app:title="@string/app_title"
+        app:titleTextColor="@color/white"
+        app:subtitle="@string/monheim_am_rhein"
+        app:subtitleTextColor="@color/white"
+        app:logo="@drawable/monheim_logo"
+        app:logoDescription="@string/startup_toolbar_logo_description"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/transparent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="118dp"
-            app:title="Fahrradverleih"
-            app:titleTextColor="@color/white"
-            app:subtitle="Monheim am Rhein"
-            app:subtitleTextColor="@color/white"
-            app:logo="@drawable/ic_monheim"
-            android:background="#66FFFFFF" />
-
-    </com.google.android.material.appbar.AppBarLayout>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/content_container"
@@ -35,10 +28,13 @@
         android:layout_height="wrap_content"
         android:background="@drawable/startup_content_background"
         android:layout_margin="32dp"
-        android:padding="12dp"
+        android:paddingStart="14dp"
+        android:paddingEnd="14dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/app_bar" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
