--- a/app/src/main/res/layout/fragment_startup_login.xml
+++ b/app/src/main/res/layout/fragment_startup_login.xml
@@ -5,47 +5,96 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:gravity="center"
+    tools:background="#a000"
     tools:context=".view.startup.StartupLoginFragment">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/email_container"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:expandedHintEnabled="true"
-        android:hint="@string/email_address"
-        android:textColorHint="@color/white"
-        app:hintTextColor="@color/white"
-        >
+        android:layout_height="wrap_content" >
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/email_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
+        <ImageView
+            android:id="@+id/email_icon"
+            android:src="@drawable/ic_email"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:contentDescription="@string/login_email_icon_description"
+            app:tint="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:expandedHintEnabled="true"
-        android:hint="@string/password"
-        android:textColorHint="@color/white"
-        app:hintTextColor="@color/white">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password_input"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Theme.FahrradverleihAndroid.StartupInput"
+            android:id="@+id/email_container"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
+            android:layout_marginStart="8dp"
+            android:hint="@string/email_address"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/email_icon"
+            >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/email_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_marginTop="6dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <ImageView
+            android:id="@+id/password_icon"
+            android:src="@drawable/ic_lock"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:contentDescription="@string/login_password_icon_description"
+            app:tint="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
-    </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Theme.FahrradverleihAndroid.StartupInput"
+            android:id="@+id/password_container"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:hint="@string/password"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/password_icon"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
+        style="@style/Theme.FahrradverleihAndroid.StartupButton"
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minWidth="200dp"
+        android:layout_marginTop="6dp"
         android:text="@string/login"
         />
 
