--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,7 +14,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
 
-        <!-- Customize your theme here. -->
+        <!-- Entfernt die Standard ActionBat in Activities -->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
@@ -23,5 +23,38 @@
     <style name="Theme.FahrradverleihAndroid.FullscreenDialog" parent="Theme.MaterialComponents.Light.Dialog">
         <item name="android:windowIsFloating">false</item>
         <item name="android:windowBackground">@color/white</item>
+    </style>
+
+    <!-- Basis-Theme für die StartupActivity mit dunklem Hintergrund (Bild) -->
+    <style name="Theme.FahrradverleihAndroid.StartupBase" parent="Theme.FahrradverleihAndroid">
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">#AFFF</item>
+        <item name="colorSecondary">@color/white</item>
+        <item name="colorSecondaryVariant">#AFFF</item>
+        <item name="android:statusBarColor">#65a8ca</item>
+        <item name="colorControlNormal">#c5c5c5</item>
+        <item name="colorControlActivated">@color/white</item>
+        <item name="colorControlHighlight">@color/white</item>
+    </style>
+
+    <!-- Buttons mit weißem Outline für die StartupActivity -->
+    <style name="Theme.FahrradverleihAndroid.StartupButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textAppearance">?android:attr/textAppearanceMediumInverse</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/transparent</item>
+        <item name="cornerRadius">12dp</item>
+        <item name="rippleColor">#3FFF</item>
+        <item name="strokeColor">@color/white</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="Theme.FahrradverleihAndroid.StartupInput" parent="Widget.Design.TextInputLayout">
+        <item name="tint">@color/white</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textCursorDrawable">@color/white</item>
+        <item name="expandedHintEnabled">false</item>
+        <item name="boxStrokeColor">@color/white</item>
     </style>
 </resources>
