--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -1,20 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.profil.ProfilFragment">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:title="Mein Profil"
+            app:titleTextColor="@color/white"
+            />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <include
-        android:id="@+id/error_panel"
         layout="@layout/fragment_error_panel"
-        android:visibility="gone" />
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/error_panel"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/form_panel"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" >
 
         <LinearLayout
             android:id="@+id/bottom_buttons_container"
@@ -28,12 +58,14 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <Button
+                style="@style/Theme.FahrradverleihAndroid.DangerButton"
                 android:id="@+id/logout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/profile_logout_button" />
 
             <Button
+                style="@style/Theme.FahrradverleihAndroid.PrimaryButton"
                 android:id="@+id/apply"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -50,69 +82,82 @@
             app:layout_constraintTop_toTopOf="parent">
             <LinearLayout
                 android:id="@+id/form_container"
+                android:padding="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:hint="@string/profile_input_vorname"
-                    app:expandedHintEnabled="true"
+                <de.fhswf.fahrradverleih.android.widget.IconInputView
+                    android:id="@+id/vorname_input"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/vorname_input"
-                        android:inputType="textPersonName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_height="wrap_content"
+                    app:label="@string/profile_input_vorname"
+                    app:inputType="name"
+                    app:icon="@drawable/ic_badge"
+                    />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:hint="@string/profile_input_nachname"
-                    app:expandedHintEnabled="true"
+                <de.fhswf.fahrradverleih.android.widget.IconInputView
+                    android:id="@+id/nachname_input"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/nachname_input"
-                        android:inputType="textPersonName"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    app:label="@string/profile_input_nachname"
+                    app:inputType="name"
+                    />
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:hint="@string/profile_input_email"
-                    app:expandedHintEnabled="true"
+                <de.fhswf.fahrradverleih.android.widget.IconInputView
+                    android:id="@+id/email_input"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/email_input"
-                        android:inputType="textEmailAddress"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    app:label="@string/profile_input_email"
+                    app:inputType="email"
+                    app:icon="@drawable/ic_email"
+                    />
 
-                <Button
-                    android:id="@+id/configure_login"
-                    android:text="@string/profile_configure_login_button"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp" >
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:hint="@string/profile_input_id"
-                    app:expandedHintEnabled="true"
+                    <ImageView
+                        android:id="@+id/login_icon"
+                        android:src="@drawable/ic_lock"
+                        android:contentDescription="@string/view_icon_input_icon_description"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        app:tint="@color/grey"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+
+                    <Button
+                        style="@style/Theme.FahrradverleihAndroid.PrimaryButton"
+                        android:id="@+id/configure_login"
+                        android:text="@string/profile_configure_login_button"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="6dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/login_icon"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <de.fhswf.fahrradverleih.android.widget.IconInputView
+                    android:id="@+id/id_input"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/id_input"
-                        android:inputType="none"
-                        android:enabled="false"
-                        android:textIsSelectable="true"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
+                    app:label="@string/profile_input_id"
+                    app:inputType="none"
+                    app:icon="@drawable/ic_link"
+                    />
 
             </LinearLayout>
         </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
