--- a/app/src/main/res/layout/fragment_startup_login.xml
+++ b/app/src/main/res/layout/fragment_startup_login.xml
@@ -43,6 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
+                android:textColor="@color/white"
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -83,6 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:textColor="@color/white"
                 />
         </com.google.android.material.textfield.TextInputLayout>
 
