--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
 
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="titleTextColor">@color/white</item>
 
         <!-- Entfernt die Standard ActionBat in Activities -->
         <item name="windowActionBar">false</item>
@@ -56,5 +57,30 @@
         <item name="android:textCursorDrawable">@color/white</item>
         <item name="expandedHintEnabled">false</item>
         <item name="boxStrokeColor">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <!-- Buttons mit Outline in der primären Farbe -->
+    <style name="Theme.FahrradverleihAndroid.PrimaryButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="backgroundTint">@color/transparent</item>
+        <item name="cornerRadius">0dp</item>
+        <item name="rippleColor">@color/brand_primary_translucent</item>
+        <item name="strokeColor">?attr/colorPrimary</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <!-- Buttons mit rotem Outline -->
+    <style name="Theme.FahrradverleihAndroid.DangerButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+        <item name="android:textColor">@color/danger</item>
+        <item name="backgroundTint">@color/transparent</item>
+        <item name="cornerRadius">0dp</item>
+        <item name="rippleColor">#FFA3A3</item>
+        <item name="strokeColor">@color/danger</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="textAllCaps">false</item>
     </style>
 </resources>
