--- a/app/src/main/res/layout/item_rad_base.xml
+++ b/app/src/main/res/layout/item_rad_base.xml
@@ -12,8 +12,8 @@
 
     <ImageView
         android:id="@+id/rad_icon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
         android:contentDescription="@string/item_ausleihe_icon_description"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,7 +25,8 @@
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
+        android:layout_marginStart="16dp"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/rad_icon"
         app:layout_constraintEnd_toEndOf="parent"
