--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,6 +22,16 @@
 
     <!-- Style für die Fullscreen-Dialoge -->
     <style name="Theme.FahrradverleihAndroid.FullscreenDialog" parent="Theme.MaterialComponents.Light.Dialog">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/brand_primary</item>
+        <item name="colorPrimaryVariant">@color/brand_primary_dark</item>
+        <item name="colorOnPrimary">@color/white</item>
+
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/brand_primary</item>
+        <item name="colorSecondaryVariant">@color/brand_primary_dark</item>
+        <item name="colorOnSecondary">@color/black</item>
+
         <item name="android:windowIsFloating">false</item>
         <item name="android:windowBackground">@color/white</item>
     </style>
@@ -68,6 +78,18 @@
         <item name="cornerRadius">0dp</item>
         <item name="rippleColor">@color/brand_primary_translucent</item>
         <item name="strokeColor">?attr/colorPrimary</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <!-- Buttons mit grauem Outline -->
+    <style name="Theme.FahrradverleihAndroid.SecondaryButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+        <item name="android:textColor">@color/grey</item>
+        <item name="backgroundTint">@color/transparent</item>
+        <item name="cornerRadius">0dp</item>
+        <item name="rippleColor">#B6B6B6</item>
+        <item name="strokeColor">@color/grey</item>
         <item name="strokeWidth">1dp</item>
         <item name="textAllCaps">false</item>
     </style>
