--- a/app/src/main/res/layout/item_rad_kategorie.xml
+++ b/app/src/main/res/layout/item_rad_kategorie.xml
@@ -10,10 +10,12 @@
         />
 
     <Button
+        style="@style/Theme.FahrradverleihAndroid.PrimaryButton"
         android:id="@+id/auswahl"
         android:text="@string/item_button_select"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/bottom_buttons_gap"
         />
 
 </merge>
