--- a/app/src/main/res/layout/fragment_ausleihe_beenden_dialog.xml
+++ b/app/src/main/res/layout/fragment_ausleihe_beenden_dialog.xml
@@ -30,8 +30,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
+        android:layout_marginStart="@dimen/bottom_buttons_margin"
+        android:layout_marginEnd="@dimen/bottom_buttons_margin"
+        android:layout_marginBottom="@dimen/bottom_buttons_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -48,6 +49,7 @@
             android:id="@+id/confirm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/bottom_buttons_gap"
             android:text="@string/ausleihe_beenden_confirm" />
 
     </LinearLayout>
