--- a/app/src/main/res/layout/fragment_neue_ausleihe_dialog.xml
+++ b/app/src/main/res/layout/fragment_neue_ausleihe_dialog.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,15 +11,16 @@
         android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/dialog_toolbar"
+            style="@style/Theme.FahrradverleihAndroid.FullscreenDialog.ActionBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/white"
+            app:logo="@drawable/ic_location"
             app:subtitle="@string/neue_ausleihe_subtitle"
             tools:title="Lichtenberger Straße" />
 
@@ -32,22 +32,26 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
+        android:layout_marginStart="@dimen/bottom_buttons_margin"
+        android:layout_marginEnd="@dimen/bottom_buttons_margin"
+        android:layout_marginBottom="@dimen/bottom_buttons_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buchen"
+            style="@style/Theme.FahrradverleihAndroid.PrimaryButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/neue_ausleihe_buchung_button" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/back"
+            style="@style/Theme.FahrradverleihAndroid.SecondaryButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/bottom_buttons_gap"
             android:text="@string/go_back_button" />
 
     </LinearLayout>
@@ -56,29 +60,28 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="vertical"
         android:gravity="center_horizontal"
+        android:orientation="vertical"
         android:padding="24dp"
+        app:layout_constraintBottom_toTopOf="@id/bottom_buttons_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appbar_layout"
-        app:layout_constraintBottom_toTopOf="@id/bottom_buttons_container">
+        app:layout_constraintTop_toBottomOf="@id/appbar_layout">
 
         <!-- Rad-Info -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/rad_icon"
                 android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_height="wrap_content"
                 android:contentDescription="@string/item_ausleihe_icon_description"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:src="@drawable/bike_ebike"
-                />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/bike_ebike" />
 
             <LinearLayout
                 android:id="@+id/extensions"
@@ -86,30 +89,30 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:orientation="vertical"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/rad_icon"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/rad_typ"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:text="E-Bike"
-                    />
+                    android:textStyle="bold"
+                    tools:text="E-Bike" />
 
                 <TextView
                     android:id="@+id/tarif"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:text="Tarif: EUR 7 für 3 Stunde(n)"
-                    />
+                    android:paddingTop="@dimen/rad_item_info_margin"
+                    tools:text="Tarif: EUR 7 für 3 Stunde(n)" />
 
                 <TextView
                     android:id="@+id/id_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:text="ID: R-0004"
-                    />
+                    android:paddingTop="@dimen/rad_item_info_margin"
+                    tools:text="ID: R-0004" />
 
             </LinearLayout>
 
@@ -119,27 +122,31 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/neue_ausleihe_dauer_label"
-            />
+            android:layout_marginTop="72dp"
+            android:text="@string/neue_ausleihe_dauer_label" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_marginTop="36dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/dauer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="3"
-                />
+                android:textColor="@color/black"
+                android:textSize="52sp"
+                android:textStyle="bold"
+                tools:text="3" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
                 android:text="@string/neue_ausleihe_dauer_unit_label"
-                />
+                android:textColor="@color/grey"
+                android:textSize="52sp" />
 
         </LinearLayout>
 
@@ -147,32 +154,34 @@
             android:id="@+id/info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="Gesamtpreis EUR 7\nRückgabe bis 15:35 Uhr"
-            />
+            android:layout_marginTop="36dp"
+            android:gravity="center"
+            tools:text="Gesamtpreis EUR 7\nRückgabe bis 15:35 Uhr" />
 
         <LinearLayout
-            android:weightSum="2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginTop="36dp"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <Button
                 android:id="@+id/minus"
+                style="@style/Theme.FahrradverleihAndroid.PrimaryButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginRight="6dp"
-                android:text="@string/neue_ausleihe_button_minus"
-                />
+                android:layout_weight="1"
+                android:text="@string/neue_ausleihe_button_minus" />
 
             <Button
                 android:id="@+id/plus"
+                style="@style/Theme.FahrradverleihAndroid.PrimaryButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginLeft="6dp"
-                android:text="@string/neue_ausleihe_button_plus"
-                />
+                android:layout_weight="1"
+                android:text="@string/neue_ausleihe_button_plus" />
 
         </LinearLayout>
 
