--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="rad_item_info_margin">2dp</dimen>
+
+    <dimen name="bottom_buttons_margin">12dp</dimen>
+    <dimen name="bottom_buttons_gap">4dp</dimen>
 </resources>
