--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,6 +20,16 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="Theme.FahrradverleihAndroid.ActionBar" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <item name="titleTextColor">@color/white</item>
+        <item name="titleTextAppearance">@style/TextAppearance.AppCompat.Large</item>
+    </style>
+
+    <style name="Theme.FahrradverleihAndroid.MarkerTextAppearance" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:fontWeight">400</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <!-- Style für die Fullscreen-Dialoge -->
     <style name="Theme.FahrradverleihAndroid.FullscreenDialog" parent="Theme.MaterialComponents.Light.Dialog">
         <!-- Primary brand color. -->
@@ -32,8 +42,21 @@
         <item name="colorSecondaryVariant">@color/brand_primary_dark</item>
         <item name="colorOnSecondary">@color/black</item>
 
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
         <item name="android:windowIsFloating">false</item>
         <item name="android:windowBackground">@color/white</item>
+    </style>
+
+    <style name="Theme.FahrradverleihAndroid.FullscreenDialog.ActionBar" parent="Widget.MaterialComponents.Toolbar">
+        <item name="titleTextColor">@color/white</item>
+        <item name="titleTextAppearance">@style/TextAppearance.AppCompat.Medium</item>
+        <item name="subtitleTextColor">@color/white</item>
+        <item name="subtitleTextAppearance">@style/TextAppearance.AppCompat.Small</item>
+        <item name="contentInsetStartWithNavigation">0dp</item>
+        <item name="contentInsetStart">4dp</item>
+        <item name="contentInsetEnd">8dp</item>
+        <item name="titleMarginStart">12dp</item>
     </style>
 
     <!-- Basis-Theme für die StartupActivity mit dunklem Hintergrund (Bild) -->
@@ -70,39 +93,39 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <!-- Buttons mit Outline in der primären Farbe -->
-    <style name="Theme.FahrradverleihAndroid.PrimaryButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
-        <item name="android:textColor">?attr/colorPrimary</item>
-        <item name="backgroundTint">@color/transparent</item>
+    <!-- Basis-Theme für Outlined Buttons; erlaubt weniger hohe Buttons -->
+    <style name="Theme.FahrradverleihAndroid.ButtonBase" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:padding">6dp</item>
+        <item name="android:minHeight">0dp</item>
+        <item name="minHeight">0dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+
         <item name="cornerRadius">0dp</item>
+        <item name="textAllCaps">false</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="backgroundTint">@color/transparent</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+    </style>
+
+    <!-- Buttons mit Outline in der primären Farbe -->
+    <style name="Theme.FahrradverleihAndroid.PrimaryButton" parent="Theme.FahrradverleihAndroid.ButtonBase">
+        <item name="android:textColor">?attr/colorPrimary</item>
         <item name="rippleColor">@color/brand_primary_translucent</item>
         <item name="strokeColor">?attr/colorPrimary</item>
-        <item name="strokeWidth">1dp</item>
-        <item name="textAllCaps">false</item>
     </style>
 
     <!-- Buttons mit grauem Outline -->
-    <style name="Theme.FahrradverleihAndroid.SecondaryButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+    <style name="Theme.FahrradverleihAndroid.SecondaryButton" parent="Theme.FahrradverleihAndroid.ButtonBase">
         <item name="android:textColor">@color/grey</item>
-        <item name="backgroundTint">@color/transparent</item>
-        <item name="cornerRadius">0dp</item>
         <item name="rippleColor">#B6B6B6</item>
         <item name="strokeColor">@color/grey</item>
-        <item name="strokeWidth">1dp</item>
-        <item name="textAllCaps">false</item>
     </style>
 
     <!-- Buttons mit rotem Outline -->
-    <style name="Theme.FahrradverleihAndroid.DangerButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
+    <style name="Theme.FahrradverleihAndroid.DangerButton" parent="Theme.FahrradverleihAndroid.ButtonBase">
         <item name="android:textColor">@color/danger</item>
-        <item name="backgroundTint">@color/transparent</item>
-        <item name="cornerRadius">0dp</item>
         <item name="rippleColor">#FFA3A3</item>
         <item name="strokeColor">@color/danger</item>
-        <item name="strokeWidth">1dp</item>
-        <item name="textAllCaps">false</item>
     </style>
 </resources>
